Add admin member deletion
